# seqopt

./: .gitignore  README.md  setup.cfg  setup.py  simulate.py  test_input.py
seqopt/: __init__.py  callbacks.py  model.py  process.py
seqopt/models/: model.py  trial.py  utils.py
seqopt/optimizers/: helpers.py  optimizers.py  scorers.py  selectors.py  strategy.py
seqopt/process/: process.py  utils.py
seqopt/tests/: optimizer_test.py
