[metadata]
name = sqeopt
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mEskintoch/seqopt
author = Mustafa Samed Eskin
author_email = mustafasamedeskin@gmail.com

[options]
packages = find:
install_requires =
    numpy

[options.packages.find]
exclude =
    tests*



